prevent magellan overlapping .logo-table

--- a/src/planbox_ui/static/styles/style.css
+++ b/src/planbox_ui/static/styles/style.css
@@ -161,6 +161,8 @@ select {
   display: table;
   border-collapse: collapse;
   border-spacing: 0;
+  position: relative;
+  z-index: 50;
 }
 .logo-table-row {
   display: table-row;
